--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -52,7 +52,7 @@
 
     &__img2 {
         position: absolute;
-        top: 85%;
+        bottom: 0;
         left: 60%;
     }
 }
@@ -84,7 +84,7 @@
         }
 
         &__img2 {
-            top: 81%;
+            bottom: 0;
             left: 25%;
             right: 0;
         }
@@ -122,7 +122,7 @@
         &__img2 {
             width: 90%;
             left: 5%;
-            top: 75%;
+            bottom: 0;
         }
     }
 }
