--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,8 @@
 @use "./layout/header";
 @use "./layout/footer";
 @use "./layout/hero";
+@use "./layout/build";
+@use "./layout/stories";
 
 // ! PAGES
 
