--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,8 @@
 @use "../base/variables" as *;
 
 .header {
-    padding-top: 70px;
+    padding-top: 65px;
+    padding-bottom: 5px;
     background: $green;
     top: 0;
     left: 0;
