--- a/css/main.css
+++ b/css/main.css
@@ -174,17 +174,18 @@ img {
   gap: 40px;
 }
 .header__links {
-  transition: all 0.3s ease;
   font-weight: 600;
   font-size: 18px;
   line-height: 28px;
   color: #fff;
+  transition: all 0.3s ease;
+  display: block;
 }
 .header__links:hover {
   color: #F67E7E;
 }
 .header__links:active {
-  opacity: 0.8;
+  opacity: 0.7;
   transform: scale(0.95);
 }
 .header__btn {
@@ -271,6 +272,107 @@ img {
   }
   .header__menu.active span:nth-child(3) {
     transform: rotate(-45deg) translate(4.5px, -4.5px);
+  }
+}
+.footer {
+  padding: 48px 0;
+  background-color: #002529;
+}
+.footer__cnt {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer__list {
+  display: grid;
+  gap: 25px;
+}
+.footer__item {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+.footer__link {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+  color: #fff;
+  transition: all 0.3s ease;
+}
+.footer__link:hover {
+  color: #F67E7E;
+}
+.footer__link:active {
+  opacity: 0.7;
+  transform: scale(0.95);
+}
+.footer__list {
+  display: grid;
+  gap: 5px;
+}
+.footer__text {
+  color: #fff;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+  opacity: 0.6;
+}
+.footer__links {
+  opacity: 0.6;
+}
+.footer__list3 {
+  display: grid;
+  gap: 51px;
+}
+.footer__item3 {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.footer__item3 i {
+  font-size: 24px;
+  color: #fff;
+  transition: all 0.3s ease;
+}
+.footer__item3 i:hover {
+  color: #F67E7E;
+}
+.footer__item3 i:active {
+  transform: scale(0.95);
+  opacity: 0.7;
+}
+.footer__copy {
+  color: #fff;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 25px;
+  letter-spacing: 0px;
+  text-align: right;
+  opacity: 0.6;
+}
+
+@media only screen and (max-width: 480px) {
+  .footer {
+    height: 85vh;
+    display: grid;
+    place-items: center;
+    padding: 0;
+  }
+  .footer__cnt {
+    flex-direction: column;
+    gap: 24px;
+  }
+  .footer ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer__list3 {
+    display: flex;
+    flex-direction: column-reverse !important;
+    gap: 16px;
   }
 }
 .hero {
