--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -37,18 +37,19 @@
     }
 
     &__links {
-        transition: all 0.3s ease;
         font-weight: 600;
         font-size: 18px;
         line-height: 28px;
         color: $white;
+        transition: all 0.3s ease;
+        display: block;
 
         &:hover {
             color: $pink;
         }
 
         &:active {
-            opacity: 0.8;
+            opacity: 0.7;
             transform: scale(0.95);
         }
     }
