--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,15 @@ img {
     padding: 0 10px;
   }
 }
+.hidden-content {
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+
+.hidden-content.show {
+  opacity: 1;
+}
+
 #loader {
   width: 80px;
   height: 80px;
