--- a/scss/base/_general.scss
+++ b/scss/base/_general.scss
@@ -90,14 +90,14 @@ img {
     }
 }
 
-// .hidden-content {
-//     opacity: 0;
-//     transition: opacity 1s ease;
-// }
+.hidden-content {
+    opacity: 0;
+    transition: opacity 1s ease;
+}
 
-// .hidden-content.show {
-//     opacity: 1;
-// }
+.hidden-content.show {
+    opacity: 1;
+}
 
 #loader {
     width: 80px;
