--- a/scss/layout/_ready.scss
+++ b/scss/layout/_ready.scss
@@ -46,6 +46,19 @@
     }
 }
 
+@media only screen and (max-width: 918px) {
+    .ready {
+
+        &__cnt {
+            width: 100%;
+        }
+
+        &__img {
+            display: none;
+        }
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .ready {
 
